# reflektor

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  config.h.in  configure  configure.ac  reflektor_do
src/: Makefile.am  Makefile.in  discover.c  discover.h  mirror.c  mirror.h  private.h  reflektor.c  reflektor.h  reflektor_shell.c  util.c  util.h  vevent.c  vevent.h
